fix: corrected appearance on mobile 320px, delete modal now visible and profile avatar is correct size and placement with rounded corners

--- a/src/blocks/modal.css
+++ b/src/blocks/modal.css
@@ -114,6 +114,7 @@
 
 .modal__title-delete-card {
   margin: 0;
+  padding: 0px;
   font-family: "Poppins", Arial, sans-serif;
   font-weight: 500;
   font-size: 24px;
@@ -129,13 +130,16 @@
 }
 
 .modal__buttons {
+  padding: 0px;
   display: flex;
   justify-content: center;
   gap: 20px;
   margin-top: 32px;
+  margin-bottom: 0px;
 }
 
 .modal__delete-btn {
+  padding: 0px;
   background-color: rgba(255, 51, 51, 1);
   font-family: "Poppins", Arial, sans-serif;
   font-weight: 500;
@@ -151,6 +155,7 @@
 }
 
 .modal__cancel-btn {
+  padding: 0px;
   background-color: #fff;
   font-family: "Poppins", Arial, sans-serif;
   font-weight: 500;
@@ -299,5 +304,45 @@
 
   .modal__save-btn {
     max-width: none;
+  }
+
+  .modal__container-delete-card {
+    top: 214px;
+    left: auto;
+    padding: 16px 8px 0px 8px;
+    width: 300px;
+    height: 208px;
+  }
+
+  .modal-background {
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+
+  .modal__buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 12px;
+    margin: 20px 60px 0px;
+    padding: 0px;
+  }
+
+  .modal__title-delete-card {
+    margin: 0;
+    width: 276px;
+    padding: 12px 12px 0px 12px;
+    font-family: "Poppins", Arial, sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 120%;
+    text-align: center;
+    color: rgba(33, 33, 33, 1);
+    font-style: Medium;
+    letter-spacing: 0%;
+  }
+
+  .modal__close-btn_delete-card {
+    right: 16px;
+    top: -56px;
   }
 }
